--- a/aboutus.css
+++ b/aboutus.css
@@ -31,7 +31,7 @@ h1 {
 
 p {
     font-size: 1.1em;
-    color: #fff;
+    color: #333;
     text-align: justify;
     padding: 0 20px;
     line-height: 1.6;
