--- a/contacts.css
+++ b/contacts.css
@@ -5,3 +5,16 @@ body {
     background-color: #b01818;
     background-image: url('./images/honda.jpg');
 }
+
+a{
+    text-decoration: solid;
+    color: #fff;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+a:hover{
+    background-color: black;
+    color:#fff;
+}
