--- a/contacts.css
+++ b/contacts.css
@@ -18,3 +18,17 @@ a:hover{
     background-color: black;
     color:#fff;
 }
+h1{
+    font-size: larger;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+}
+p{
+    font-size: 2.5em;
+    color: #fff;
+    text-align: justify;
+    padding: 0.20px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
