--- a/contacts.css
+++ b/contacts.css
@@ -4,6 +4,8 @@ body {
     padding: 0;
     background-color: #b01818;
     background-image: url('./images/honda.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 a{
