--- a/login.css
+++ b/login.css
@@ -3,6 +3,27 @@ body {
     background-color: #f0f0f0;
 }
 
+header {
+    background-color: #333;
+    padding: 20px 0;
+}
+header:hover{
+    background-color:red;
+}
+
+a {
+    text-decoration: none;
+    color: #5220c8;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+a:hover {
+    background-color: #333;
+    color: #fff;
+    
 nav ul {
     list-style: none;
     margin: 0;
