--- a/register.css
+++ b/register.css
@@ -6,7 +6,19 @@
     border: 1px solid #ccc;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+a {
+    text-decoration: none;
+    color: #5220c8;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
 
+a:hover {
+    background-color: #333;
+    color: #fff;
+}
 .register h1 {
     text-align: center;
     margin-bottom: 20px;
