--- a/booking.css
+++ b/booking.css
@@ -8,6 +8,28 @@
     border-radius: 10px; 
 }
 
+header {
+    background-color: black;
+    padding: 20px 0;
+}
+header:hover{
+    background-color:red;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+a:hover {
+    background-color: #333;
+    color: #fff;
+}
+
 .booking h1 {
     text-align: center;
     margin-bottom: 20px;
