--- a/payment.css
+++ b/payment.css
@@ -7,6 +7,28 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+header {
+    background-color: black;
+    padding: 20px 0;
+}
+header:hover{
+    background-color:red;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+a:hover {
+    background-color: #333;
+    color: #fff;
+}
+
 .payment h1 {
     text-align: center;
     margin-bottom: 20px;
