--- a/login.css
+++ b/login.css
@@ -8,7 +8,7 @@ body {
 
 header {
     background-color: whitesmoke;
-    padding: 2mm;
+    padding: 10px;
 }
 header:hover{
     background-color:pink;
