--- a/register.css
+++ b/register.css
@@ -6,6 +6,15 @@
     border: 1px solid #ccc;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+header {
+    background-color: whitesmoke;
+    padding: 10px;
+}
+header:hover{
+    background-color:skyblue;
+}
+
 a {
     text-decoration: none;
     color: #5220c8;
