--- a/payment.css
+++ b/payment.css
@@ -2,7 +2,7 @@
     max-width: 500px;
     margin: 40px auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: black;
     border: 1px solid #ccc;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-image: url('./images/Charles\ Leclerc\ \(16\)\ _\ Sports\ car\ wallpaper….jpeg');
@@ -16,11 +16,11 @@ body{
 }
 
 header {
-    background-color: black;
+    background-color: blueviolet;
     padding: 20px 0;
 }
 header:hover{
-    background-color:red;
+    background-color:indigo;
 }
 
 a {
