--- a/payment.css
+++ b/payment.css
@@ -12,7 +12,8 @@
 body{
     background-image: url('');
     background-size:cover;
-    background-position:center;
+    background-position:calc(3);
+    background-image: url('./images/download.jpeg');
 }
 
 header {
