--- a/aboutus.css
+++ b/aboutus.css
@@ -20,12 +20,12 @@ a {
 
 a:hover {
     background-color: #333;
-    color: #fff;
+    color: black;
 }
 
 h1 {
     font-size: 2.5em;
-    color: #fff;
+    color: black;
     text-align: center;
     padding: 20px 0;
     -webkit-text-fill-color: transparent;
