removed the script link from the index page

--- a/aboutus.css
+++ b/aboutus.css
@@ -33,7 +33,7 @@ h1 {
 
 p {
     font-size: 1.1em;
-    color: #333;
+    color: white;
     text-align: justify;
     padding: 0 20px;
     line-height: 1.6;
